--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "chart.js": "^3.7.1",
     "clsx": "^1.1.1",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-drag-reorder": "^1.1.0",
