--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "chart.js": "^3.7.1",
     "clsx": "^1.1.1",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.38.9",
     "react-chartjs-2": "^4.0.1",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
