--- a/package.json
+++ b/package.json
@@ -3,22 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2-react-calendars": "^19.4.54",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "chart.js": "^3.7.1",
     "clsx": "^1.1.1",
+    "draft-js": "^0.11.7",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "rc-time-picker": "^3.7.3",
     "react": "^17.0.2",
-    "react-big-calendar": "^0.38.9",
     "react-chartjs-2": "^4.0.1",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-drag-reorder": "^1.1.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.8",
+    "swiper": "^8.0.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
